// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fleet-members/Payments Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title py-1"
    >
      <div
        class="layout align-center justify-space-between row"
      >
        <div
          class="flex"
        >
          <h3
            class="grey--text"
          >
            
          Payments
        
          </h3>
        </div>
         
        <div
          class="flex text-xs-right"
        >
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--light"
              >
                add_circle
              </i>
              
          Add new item
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-dialog__container"
      style="display: block;"
    >
      <div
        class="v-dialog__content"
        style="z-index: 0;"
        tabindex="-1"
      >
        <div
          class="v-dialog"
          style="max-width: 300px; display: none;"
        >
          
    Coming soon
  
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12"
      >
        <div>
          <div
            class="v-table__overflow"
          >
            <table
              class="v-datatable v-table theme--light"
            >
              <thead>
                <tr>
                  <th
                    aria-label="Status: Sorted ascending. Activate to sort descending."
                    aria-sort="ascending"
                    class="column sortable active asc text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Status
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Event name: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Event name
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Payment name: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Payment name
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Due date: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Due date
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Amount: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Amount
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Manage: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Manage
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                </tr>
                <tr
                  class="v-datatable__progress"
                >
                  <th
                    class="column"
                    colspan="6"
                  />
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-xs-center"
                    colspan="6"
                  >
                    No data available
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="v-datatable v-table theme--light"
          >
            <div
              class="v-datatable__actions"
            >
              <div
                class="v-datatable__actions__select"
              >
                Rows per page:
                <div
                  class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
                  role="combobox"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-select__slot"
                      >
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            5
                          </div>
                          <input
                            aria-label="Rows per page:"
                            aria-readonly="false"
                            autocomplete="on"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light v-menu__content--auto "
                          style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                          <div
                            class="v-select-list v-card theme--light"
                          >
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                class="primary--text"
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      5
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      10
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      25
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      All
                                    </div>
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-datatable__actions__range-controls"
              >
                <div
                  class="v-datatable__actions__pagination"
                >
                  –
                </div>
                <button
                  aria-label="Previous page"
                  class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                  disabled="disabled"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_left
                    </i>
                  </div>
                </button>
                <button
                  aria-label="Next page"
                  class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                  disabled="disabled"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_right
                    </i>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`fleet-members/Payments Snapshots WithData 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title py-1"
    >
      <div
        class="layout align-center justify-space-between row"
      >
        <div
          class="flex"
        >
          <h3
            class="grey--text"
          >
            
          Payments
        
          </h3>
        </div>
         
        <div
          class="flex text-xs-right"
        >
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--light"
              >
                add_circle
              </i>
              
          Add new item
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-dialog__container"
      style="display: block;"
    >
      <div
        class="v-dialog__content"
        style="z-index: 0;"
        tabindex="-1"
      >
        <div
          class="v-dialog"
          style="max-width: 300px; display: none;"
        >
          
    Coming soon
  
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12"
      >
        <div>
          <div
            class="v-table__overflow"
          >
            <table
              class="v-datatable v-table theme--light"
            >
              <thead>
                <tr>
                  <th
                    aria-label="Status: Sorted ascending. Activate to sort descending."
                    aria-sort="ascending"
                    class="column sortable active asc text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Status
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Event name: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Event name
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Payment name: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Payment name
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Due date: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Due date
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Amount: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Amount
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Manage: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    Manage
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                </tr>
                <tr
                  class="v-datatable__progress"
                >
                  <th
                    class="column"
                    colspan="6"
                  />
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="py-2"
                  >
                    <button
                      class="white--text v-btn v-btn--depressed theme--light grey"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
              Pending
            
                      </div>
                    </button>
                  </td>
                   
                  <td
                    class="py-2"
                  >
                    <div
                      class="subheading primary--text"
                    >
                      
              Random event name
            
                    </div>
                     
                    <div
                      class="grey--text"
                    >
                      
              Sep 09, 2020
            
                    </div>
                     
                    <div
                      class="grey--text"
                    >
                      
              @ Convention center
            
                    </div>
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            Event venue fee
          
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            Jul 08, 2020
          
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            $3.00
          
                  </td>
                   
                  <td
                    class="py-2"
                  >
                    <button
                      class="v-btn v-btn--depressed theme--light primary"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
              Pay now
            
                      </div>
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class="py-2"
                  >
                    <button
                      class="white--text v-btn v-btn--depressed theme--light green"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
              Paid
            
                      </div>
                    </button>
                  </td>
                   
                  <td
                    class="py-2"
                  >
                    <div
                      class="subheading primary--text"
                    >
                      
              Random event name
            
                    </div>
                     
                    <div
                      class="grey--text"
                    >
                      
              Sep 09, 2020
            
                    </div>
                     
                    <div
                      class="grey--text"
                    >
                      
              @ Convention center
            
                    </div>
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            Event venue fee
          
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            Jul 08, 2020
          
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            $3.00
          
                  </td>
                   
                  <td
                    class="py-2"
                  >
                    <!---->
                  </td>
                </tr>
                <tr>
                  <td
                    class="py-2"
                  >
                    <button
                      class="white--text v-btn v-btn--depressed theme--light red"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
              Failed
            
                      </div>
                    </button>
                  </td>
                   
                  <td
                    class="py-2"
                  >
                    <div
                      class="subheading primary--text"
                    >
                      
              Random event name
            
                    </div>
                     
                    <div
                      class="grey--text"
                    >
                      
              Sep 09, 2020
            
                    </div>
                     
                    <div
                      class="grey--text"
                    >
                      
              @ Convention center
            
                    </div>
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            Event venue fee
          
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            Jul 08, 2020
          
                  </td>
                   
                  <td
                    class="py-2 grey--text"
                  >
                    
            $3.00
          
                  </td>
                   
                  <td
                    class="py-2"
                  >
                    <button
                      class="v-btn v-btn--depressed theme--light primary"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
              Retry
            
                      </div>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="v-datatable v-table theme--light"
          >
            <div
              class="v-datatable__actions"
            >
              <div
                class="v-datatable__actions__select"
              >
                Rows per page:
                <div
                  class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
                  role="combobox"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-select__slot"
                      >
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            5
                          </div>
                          <input
                            aria-label="Rows per page:"
                            aria-readonly="false"
                            autocomplete="on"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light v-menu__content--auto "
                          style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                          <div
                            class="v-select-list v-card theme--light"
                          >
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                class="primary--text"
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      5
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      10
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      25
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      All
                                    </div>
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-datatable__actions__range-controls"
              >
                <div
                  class="v-datatable__actions__pagination"
                >
                  1-3 of 3
                </div>
                <button
                  aria-label="Previous page"
                  class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                  disabled="disabled"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_left
                    </i>
                  </div>
                </button>
                <button
                  aria-label="Next page"
                  class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                  disabled="disabled"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_right
                    </i>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
